--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Mark Hakansson <mark.hakansson@live.se>"]
 edition = "2018"
 description = "Raw bindings to the KLEE library using bindgen"
+categories = ["no-std", "external-ffi-bindings"]
+readme = "README.md"
+repository = "https://github.com/markhakansson/klee-bindings"
+license = "MIT"
 
 [dependencies]
 cty = "0.2.1"
