--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Mark Hakansson <mark.hakansson@live.se>"]
 edition = "2018"
 description = "Raw bindings to the KLEE library using bindgen"
 categories = ["no-std", "external-ffi-bindings"]
+keywords = ["klee", "symbolic", "execution", "verification", "test"]
 readme = "README.md"
 repository = "https://github.com/markhakansson/klee-bindings"
 license = "MIT"
