--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "klee-bindings"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Mark Hakansson <mark.hakansson@live.se>"]
 edition = "2018"
 description = "Raw bindings to the KLEE library using bindgen"
@@ -8,7 +8,7 @@ categories = ["no-std", "external-ffi-bindings"]
 keywords = ["klee", "symbolic", "execution", "verification", "test"]
 readme = "README.md"
 repository = "https://github.com/markhakansson/klee-bindings"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 cty = "0.2.1"
